Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-160

Impala crashes on startup on AMD machines without ssse3 support.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 0.6
    • Impala 1.2.1
    • None
    • IMPALA 0.6-1.p0.109, CDH 4.2.0-1.cdh4.2.0.p0.10 on Ubuntu 12.04.2 LTS, Hadoop cluster created with Cloudera Manager free 4.5.0 using parcels

    Description

      When attempting to create a Cloudera Hadoop cluster including Impala, or when attempting to add an Impala service to an existing cluster, the operation fails with this error:

      Service did not start successfully; not all of the required roles started: No Impalads are running.

      The beginning of stdout for each impalad instance shows the error that causes the crash:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGILL (0x4) at pc=0x00000000006a22ca, pid=11285, tid=140297147213632
      #
      # JRE version: 6.0_31-b04
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (20.6-b01 mixed mode linux-amd64 compressed oops)
      # Problematic frame:
      # C [impalad+0x2a22ca] boost::uuids::detail::sha1::process_block()+0xda
      #
      # An error report file with more information is saved as:
      # /run/cloudera-scm-agent/process/342-impala-IMPALAD/hs_err_pid11285.log
      #
      # If you would like to submit a bug report, please visit:
      # http://java.sun.com/webapps/bugreport/crash.jsp
      # The crash happened outside the Java Virtual Machine in native code.
      # See problematic frame for where to report the bug.

      The strange thing is I previously installed two other test clusters using the same software stack and architecture, and I didn't hit this problem.

      But in this case, I even formatted the hosts and reinstalled everything including the OS, and I hit the same problem again.

      I attached the directory with the logs and the inspector output for the cluster.

      Attachments

        1. 344-impala-IMPALAD.tar.gz
          37 kB
          Vladimir Nicolici
        2. hs_err_pid7505.log
          46 kB
          Jim Apple
        3. hs_err_pid7505.log
          46 kB
          Thomas Conté
        4. hs_err_pid7505.log
          46 kB
          Thomas Conté
        5. inspector_output_705.json
          3 kB
          Jim Apple

        Activity

          People

            nong_impala_60e1 Nong Li
            vnicolici Vladimir Nicolici
            Votes:
            3 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: