IMPALA-160: Error on startup if machine does not support sse3.

Change-Id: I4bf8eaf618c00f4b8507b8053b33425bd17e6461
Reviewed-on: http://gerrit.ent.cloudera.com:8080/943
Reviewed-by: Nong Li <nong@cloudera.com>
Tested-by: jenkins